k8s/init/cats-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cats-api
  labels:
    app: cats-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cats-api
  template:
    metadata:
      labels:
        app: cats-api
    spec:
      containers:
        - name: cats-api
          image: registry.hub.docker.com/jirafus400/cats-api-demo-k8s:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8182
---
apiVersion: v1
kind: Service
metadata:
  name: cats-api
spec:
  selector:
    app: cats-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8182
  type: NodePort
