k8s/init/eureka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: eureka-server
  name: eureka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  strategy: {}
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
        - env:
            - name: SPRING_PROFILES_ACTIVE
              value: docker
          image: registry.hub.docker.com/jirafus400/cats-eureka:latest
          name: eureka-server
          ports:
            - containerPort: 8761
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eureka-server
  name: eureka-server
spec:
  ports:
    - name: "8761"
      port: 8761
      targetPort: 8761
  selector:
    app: eureka-server
status:
  loadBalancer: {}
