k8s/init/gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-gateway
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  strategy: {}
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - env:
            - name: LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_SECURITY
              value: ' TRACE'
            - name: SPRING_PROFILES_ACTIVE
              value: docker
          image: registry.hub.docker.com/jirafus400/cats-gateway-demo:latest
          name: api-gateway
          ports:
            - containerPort: 8080
            - containerPort: 9191
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-gateway
  name: api-gateway
spec:
  type: LoadBalancer
  ports:
    - name: "9191"
      port: 9191
      targetPort: 8080
  selector:
    app: api-gateway
status:
  loadBalancer: {}
