k8s/init/keycloak.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  strategy:
    type: Recreate
  template:
    metadata:

      labels:
        app: keycloak
    spec:
      containers:
        - args:
            - start-dev
            - --import-realm
          image: quay.io/keycloak/keycloak:18.0.0
          name: keycloak
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - name: keycloak-volume
              mountPath: /opt/keycloak/data/import/realm-export.json
              subPathExpr: realm-export.json
      volumes:
        - name: keycloak-volume
          configMap:
            name: keycloak-configmap
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: keycloak
