k8s/init/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cats-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "demo-cats.internal"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 9191
    - host: "auth.localtest.me"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: example-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
#spec:
#  rules:
#    - host: auth.localtest.me
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: keycloak
#                port:
#                  number: 8080
